### Improve code quality : use pre-commit package to configure/run the code quality (HEAD -> main)
>Mon, 2 Aug 2021 01:38:46 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Use read-only mode when opening a file
>Mon, 2 Aug 2021 01:37:18 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix the log verbose
>Mon, 2 Aug 2021 01:35:35 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### updating MBHdemo and adding ucb sky circle example
>Wed, 19 May 2021 16:02:26 -0500

>Author: Tyson Littenberg (tyson.littenberg@ligo.org)

>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)




### Add shields.io badge for master branch docs.
>Wed, 12 May 2021 17:30:47 -0400

>Author: Will M. Farr (will.farr@ligo.org)

>Commiter: Will M. Farr (will.farr@ligo.org)




### Adding bare link to documentation.
>Wed, 12 May 2021 17:27:18 -0400

>Author: Will M. Farr (will.farr@ligo.org)

>Commiter: Will M. Farr (will.farr@ligo.org)




### bumped version number to 1.0.0!
>Wed, 24 Mar 2021 13:22:28 -0500

>Author: Tyson Littenberg (tyson.littenberg@ligo.org)

>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)




### update to docs
>Wed, 24 Mar 2021 12:52:54 -0500

>Author: Tyson Littenberg (tyson.littenberg@ligo.org)

>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)




### a few more typos
>Wed, 24 Mar 2021 12:50:39 -0500

>Author: Tyson Littenberg (tyson.littenberg@ligo.org)

>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)




### renaming *source_sample to *source_samples
>Wed, 24 Mar 2021 10:55:45 -0500

>Author: Tyson Littenberg (tyson.littenberg@ligo.org)

>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)




### fixed typo