@@ -1,4 +1,14 @@
-### Improve code quality : use pre-commit package to configure/run the code quality (HEAD -> main)
+### Add Support for conda (HEAD -> conda)
+>Wed, 4 Aug 2021 00:12:58 +0200
+
+>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Improve code quality : use pre-commit package to configure/run the code quality (origin/main, origin/HEAD, main)
 >Mon, 2 Aug 2021 01:38:46 +0200
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
